--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,9 +1,9 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 26
+    compileSdkVersion 27
     defaultConfig {
-        applicationId "com.fanwe.blocker"
+        applicationId "cn.linhome.blocker"
         minSdkVersion 15
         targetSdkVersion 22
         versionCode 1
@@ -19,7 +19,7 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'com.android.support:appcompat-v7:26.1.0'
-    implementation 'com.github.yangwb1259883028:looper:1.0.14'
+    implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation 'com.github.yangwb1259883028:looper:1.0.15'
     implementation project(':lib')
 }
